fixed scaling on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1886,12 +1886,19 @@ input, select, textarea {
 /* Wrapper */
 
 	#wrapper {
+		/*
 		width: 70em;
 		margin-left: 0em;
 		margin-top: 1em;
 		min-height: 100vh;
 		max-width: 100%;
 		padding: 0em 0;
+		*/
+		width: 60em;
+		margin: 0 auto;
+		min-height: 100vh;
+		max-width: 100%;
+		padding: 4em 0;
 		display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
